[package]
name = "pddl_problem_parser"
version = "0.1.3"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "1.0.0"
sexpr_parser = {git = "https://github.com/gjf2a/sexpr_parser"}
anyhop = {git = "https://github.com/gjf2a/anyhop"}